force-app/main/default/objects/geopointe__GP_Map_Layer__c/geopointe__GP_Map_Layer__c.object-meta.xml
<CustomObject>
    <label>Geopointe Map Layer</label>
    <nameField>
        <label>GP Map Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Map Layers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>