force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Border_Opacity__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Border_Opacity__c</fullName>
    <label>Border Opacity</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>