force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Data_Set__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Data_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Data Set</label>
    <referenceTo>geopointe__Data_Set_Object__c</referenceTo>
    <relationshipLabel>Geopointe Map Layers</relationshipLabel>
    <relationshipName>Map_Layers</relationshipName>
    <type>Lookup</type>
</CustomField>