force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Description__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>