force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Detail__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Detail__c</fullName>
    <label>Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>