force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Fields__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Fields__c</fullName>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>