force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Folder__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>geopointe__GP_Folder__c</referenceTo>
    <relationshipLabel>Geopointe Map Layers</relationshipLabel>
    <relationshipName>Map_Layers</relationshipName>
    <type>Lookup</type>
</CustomField>