force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Geometry__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Geometry__c</fullName>
    <label>Geometry</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>