force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Last_Sync_Date__c</fullName>
    <label>Last Sync Date</label>
    <type>DateTime</type>
</CustomField>