force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Legend__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Legend__c</fullName>
    <label>Legend</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>