force-app/main/default/objects/geopointe__GP_Map_Layer__c/fields/geopointe__Type__c.field-meta.xml
<CustomField>
    <fullName>geopointe__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DataLayer</fullName>
            </value>
            <value>
                <fullName>Thematic</fullName>
                <default>true</default>
                <label>Thematic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>