force-app/main/default/objects/geopointe__GP_Map_Layer__c/listViews/geopointe__All.listView-meta.xml
<ListView>
    <fullName>geopointe__All</fullName>
    <columns>NAME</columns>
    <columns>geopointe__Type__c</columns>
    <columns>geopointe__Folder__c</columns>
    <columns>geopointe__Data_Set__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>